--- a/Session4/ExcercisesandSolutions/Session4_Python22_Excercises.ipynb
+++ b/Session4/ExcercisesandSolutions/Session4_Python22_Excercises.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNvvoWfF5/qK+3eyOf0BL9W",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/aelshehawy/PythonSocialDataScience/blob/main/Session4_Python22_Excercises_Solutions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -119,6 +103,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "fwjE9F78WhFO"
+      },
       "source": [
         "\n",
         "**Excercise 5**\n",
@@ -126,10 +113,7 @@
         "We have the dataframe below.\n",
         "\n",
         "Task: replace New with New_. So for example New York will be --> New_York"
-      ],
-      "metadata": {
-        "id": "fwjE9F78WhFO"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -165,26 +149,17 @@
       "cell_type": "code",
       "execution_count": 7,
       "metadata": {
-        "collapsed": true,
-        "id": "hgn__bI5v-V6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
+        "collapsed": true,
+        "id": "hgn__bI5v-V6",
         "outputId": "1a21c5c1-87c7-43de-a35d-dc03acb1c759"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "          City        Event   Cost\n",
-              "0     New York        Music  10000\n",
-              "1      Parague       Poetry   5000\n",
-              "2    New Delhi      Theatre  15000\n",
-              "3       Venice       Comedy   2000\n",
-              "4  new Orleans  Tech_Summit  12000"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-ab5a832e-4880-4967-9638-ee520b878e4a\">\n",
@@ -322,10 +297,19 @@
               "    </div>\n",
               "  </div>\n",
               "  "
+            ],
+            "text/plain": [
+              "          City        Event   Cost\n",
+              "0     New York        Music  10000\n",
+              "1      Parague       Poetry   5000\n",
+              "2    New Delhi      Theatre  15000\n",
+              "3       Venice       Comedy   2000\n",
+              "4  new Orleans  Tech_Summit  12000"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -334,14 +318,14 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "nXuu7EUOX6n3"
+      },
       "source": [
         "**Excercise 6**\n",
         "\n",
         "The dataframe below contains the details about different cities. The names of spme cities contain some additional details enclosed in a bracket. Search for such names and remove the additional details."
-      ],
-      "metadata": {
-        "id": "nXuu7EUOX6n3"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -373,5 +357,28 @@
         " "
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNvvoWfF5/qK+3eyOf0BL9W",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "py38",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.8.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "bc78925e4e04b0d8d1e3f63c6d3274eb1d31795a10ccbdd7685240eaba8fc97b"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
